@@ -6,6 +6,9 @@ Changes log
 - @version-full@ (@release-date@)
     - Bug fixed
        - Fixed issue #810, generation of HTML representation of a WADL document.
+       - Fixed issue #720, complete the content-type header with the right boundary 
+         parameter value when using multipart representations.
+         Reported by xwen97.
 
 - 2.1.6 (12/05/2013)
     - Bug fixed
